# portfolio

./: .env.example  .gitignore  .vercelignore  docker-compose.yml  package-lock.json  package.json  requirements.txt  vercel.json
api/: index.py
backend/: .dockerignore  Dockerfile.vercel  chat.py  data_api.py  db.py  embedding.py  pyproject.toml  requirements.txt  route.py
backend/db/: db_init.py  db_ops.py
frontend/: Dockerfile.vercel  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: chat.js
frontend/src/components/: AIChatbotTab.jsx  Achievements.jsx  Certifications.jsx  ChatWidget.jsx  ContactFooter.jsx  Hero.jsx  ImageModal.jsx  Navbar.jsx  RippleEffect.jsx  ScrollReveal.jsx  Skills.jsx  TalkToMeTab.jsx
frontend/src/components/particles/: AchievementsParticles.jsx  CertificationsParticles.jsx  ContactParticles.jsx  HeroParticles.jsx  SkillsParticles.jsx
frontend/src/data/: achievements.json  certifications.json  contacts.json  skills.json
frontend/src/hooks/: useInView.js
