[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "google>=3.0.0",
    "google-genai>=2.10.0",
    "openai>=2.44.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.51.0",
]
